RESOLVED FIXED273090
[ iOS Debug ] imported/w3c/web-platform-tests/css/css-text/text-transform/text-transform-upperlower-105.html is a consistent assertion failure (271931)
https://bugs.webkit.org/show_bug.cgi?id=273090
Summary [ iOS Debug ] imported/w3c/web-platform-tests/css/css-text/text-transform/tex...
Vitor Roriz
Reported 2024-04-22 14:03:00 PDT
.
Attachments
Vitor Roriz
Comment 1 2024-04-22 14:03:21 PDT
Vitor Roriz
Comment 2 2024-04-22 18:10:27 PDT
EWS
Comment 3 2024-04-23 00:20:00 PDT
Committed 277858@main (5060efe86a32): <https://commits.webkit.org/277858@main> Reviewed commits have been landed. Closing PR #27606 and removing active labels.
Alexey Proskuryakov
Comment 4 2024-04-23 16:50:58 PDT
*** Bug 271931 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2024-04-23 17:44:15 PDT
Committed 272448.958@safari-7618-branch (190bb72c3d4f): <https://commits.webkit.org/272448.958@safari-7618-branch> Reviewed commits have been landed. Closing PR #1236 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.