TextIterator::emitText: cap textEndOffset to renderer's string length https://bugs.webkit.org/show_bug.cgi?id=273090 rdar://125650526

Reviewed by Ryosuke Niwa.

With the use of text-transform, the renderer's text
can differ from the renderer's original text on
length.

For example, the German S sharp (ß) when text-transformed
to uppercase becomes "SS".

When TextIterator::emitText is requested to use the
original text due to TextIteratorBehavior::EmitsOriginalText,
the received textEndOffset can be potentially greater than
the render's original text.

In our example, we would get a textEndOffset of 2 and
originalText.length would be 1, given that originalText is ß.

For that reason, we cap the textEndOffset to
the string result's length. We are also using the original's
render text instead of render's text when EmitsOriginalText
is requested.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextNode):
(WebCore::TextIterator::handleTextRun):
(WebCore::TextIterator::emitText):
* Source/WebCore/editing/TextIterator.h:
(WebCore::TextIterator::rendererTextForBehavior const):

Canonical link: https://commits.webkit.org/277858@main